Fix `flex` issue on Safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,8 +60,8 @@ body {
 }
 
 main {
-    margin-right: 20%;
     flex: 1;
+    margin-right: 20%;
 }
 
 p {
@@ -196,6 +196,7 @@ h4 {
 nav {
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     justify-content: flex-start;
     align-items: flex-start;
     padding: 0.25em 0em 0.75em 1.5em;
